--- a/animate.html
+++ b/animate.html
@@ -4,6 +4,7 @@
         <title>Animations</title>
     </head>
     <body>
+        <h1>Contact us page </h1>
         Let's make some cool projects using 
         html and css.
     </body>
