--- a/animate.html
+++ b/animate.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Contact us page </h1>
+        <h2>We will use HTML amd CSS</h2>
         Let's make some cool projects using 
         html and css.
     </body>
