--- a/animate.html
+++ b/animate.html
@@ -2,9 +2,14 @@
 <html>
     <head>
         <title>Animations</title>
+        <style>
+           h1{
+               color:blue;
+           }
+        </style>
     </head>
     <body>
-        <h1 style="color:blue;">Contact us page.</h1>
+        <h1>Contact us page.</h1>
         <h2>We will use HTML amd CSS</h2>
         Let's make some cool projects using 
         html and css.
