Remove full stop

--- a/animate.html
+++ b/animate.html
@@ -4,7 +4,7 @@
         <title>Animations</title>
     </head>
     <body>
-        <h1 style="color:blue;">Contact us page.</h1>
+        <h1 style="color:blue;">Contact us page</h1>
         <h2>We will use HTML amd CSS</h2>
         Let's make some cool projects using 
         html and css.
